# bayan

./: .gitignore  CMakeLists.txt  README.md  commands  main.cpp
.github/workflows/: release.yml
headers/: bayan.h
src/: bayan.cpp
